tests/type/errors/bad_subtract2.xi
foo() {
    x:int = 1 - {1,2}
}